crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_capabilities_codellama.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: caps
---
[
    "chat_completion",
    "code_generation",
    "fill_in_middle",
    "text_generation",
]
