crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_capabilities_llama3_debug.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: caps
---
[
    "chat_completion",
    "text_generation",
    "tool_use",
]
