crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_capabilities_llava_vision.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: caps
---
[
    "text_generation",
    "vision_input",
]
