crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_capabilities_starcoder.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: caps
---
[
    "code_generation",
    "fill_in_middle",
    "text_generation",
]
