crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_capabilities_unknown_model.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: caps
---
[
    "text_generation",
]
