crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_config_error_invalid_value.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: "format!(\"{e}\")"
---
invalid metadata value for key 'llama.block_count': expected u32, got string
