crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_config_error_missing_key.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: "format!(\"{e}\")"
---
missing required metadata key: llama.vocab_size
