crates/bitnet-models/tests/snapshots/snapshot_wave34__w34_config_error_validation.snap
---
source: crates/bitnet-models/tests/snapshot_wave34.rs
expression: "format!(\"{e}\")"
---
configuration validation failed: hidden_size must be divisible by num_heads
